[package]
name = "anchor-voting-dapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_voting_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
#anchor-litesvm = "0.3"
litesvm = "0.7.1"
solana-instruction = "2.3.0"
solana-transaction = "2.2.0"
solana-keypair = "2.2.3"
solana-kite = "0.2.1"
solana-pubkey = "2.4.0"
solana-signer = "2.2.1"
solana-hash = "2.3.0"
solana-program = "2.3.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
#solana-sdk = "4.0.1"

## https://github.com/brimigs/anchor-litesvm/blob/main/Cargo.toml
#[dev-dependencies]
#anchor-litesvm = "0.3"
#litesvm = "0.8.2"
#litesvm-token = "0.8.2"
#anchor-lang = "1.0.0-rc.2"
#anchor-client = "1.0.0-rc.2"
#solana-sdk = "~3.0"
#solana-program = "~3.0"
#solana-client = "~3.0"
#solana-program-pack = "~3.0"
#borsh = "1.5.3"
#sha2 = "0.10.8"
#thiserror = "2.0"
#spl-token = "9.0.0"
#spl-associated-token-account = "8.0.0"
#solana-system-interface = { version = "~3.0", features = ["bincode"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
